--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- background and text -->
+    <color name="white">#FEFAE0</color>
+    <color name="text_or_button">#606C38</color>
+    <color name="dark_button">#283618</color>
+    <color name="orange">#BC6C25</color>
+    <color name="true_white">#FFFFFF</color>
+    <color name="on_background">#000000</color>
+    <color name="on_surface">#000000</color>
 </resources>
