--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.AtelierApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="materialButtonStyle">@style/Widget.AtelierApp.Button</item>
+        <item name="android:textViewStyle">@style/TextView</item>
+        <item name="editTextStyle">@style/EditText</item>
     </style>
+
+    <style name="Widget.AtelierApp.Button" parent="Widget.Material3.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/text_or_button</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/nunito_sans</item>
+    </style>
+
+    <style name="TextView" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/text_or_button</item>
+        <item name="android:fontFamily">@font/nunito_sans</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="EditText" parent="android:Widget.EditText">
+        <item name="android:textColor">@color/orange</item>
+        <item name="android:fontFamily">@font/nunito_sans</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">"@drawable/edittext_rounded_corners"</item>
+
+    </style>
+
 
     <style name="Theme.AtelierApp" parent="Base.Theme.AtelierApp" />
 </resources>
