--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
     </style>
 
     <style name="Widget.AtelierApp.Button" parent="Widget.Material3.Button">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/light_yellow</item>
         <item name="backgroundTint">@color/text_or_button</item>
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">@font/nunito_sans</item>
@@ -22,11 +22,11 @@
     <style name="EditText" parent="android:Widget.EditText">
         <item name="android:textColor">@color/orange</item>
         <item name="android:fontFamily">@font/nunito_sans</item>
+        <item name="android:textColorHint">@color/orange</item>
         <item name="android:textSize">20sp</item>
         <item name="android:background">"@drawable/edittext_rounded_corners"</item>
 
     </style>
-
 
     <style name="Theme.AtelierApp" parent="Base.Theme.AtelierApp" />
 </resources>
