--- a/app/src/main/res/drawable/edittext_rounded_corners.xml
+++ b/app/src/main/res/drawable/edittext_rounded_corners.xml
@@ -1,64 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--  res/drawable/edittext_rounded_corners.xml -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Нажат и в фокусе -->
     <item android:state_pressed="true" android:state_focused="true">
         <shape>
-            <solid android:color="#FF8000"/>
-            <stroke
-                android:width="2.3dp"
-                android:color="#FF8000" />
-            <corners
-                android:radius="15dp" />
-        </shape>
-    </item>
-
-    <item android:state_pressed="true" android:state_focused="false">
-        <shape>
-            <solid android:color="#FF8000"/>
-            <stroke
-                android:width="2.3dp"
-                android:color="#FF8000" />
-            <corners
-                android:radius="15dp" />
-        </shape>
-    </item>
-
-    <item android:state_pressed="false" android:state_focused="true">
-        <shape>
-            <solid android:color="#FFFFFF"/>
-            <stroke
-                android:width="2.3dp"
-                android:color="#FF8000" />
-            <corners
-                android:radius="15dp" />
-        </shape>
-    </item>
-
-    <item android:state_pressed="false" android:state_focused="false">
-        <shape>
-            <gradient
-                android:startColor="#F2F2F2"
-                android:centerColor="#FFFFFF"
-                android:endColor="#FFFFFF"
-                android:angle="270"
-                />
-            <stroke
-                android:width="0.7dp"
-                android:color="#BDBDBD" />
-            <corners
-                android:radius="15dp" />
-        </shape>
-    </item>
-
-    <item android:state_enabled="true">
-        <shape>
+            <solid android:color="#FFF3E0"/> <!-- нежный оранжевый -->
+            <corners android:radius="15dp" />
             <padding
-                android:left="4dp"
-                android:top="4dp"
-                android:right="4dp"
-                android:bottom="4dp"
-                />
+                android:left="12dp"
+                android:top="10dp"
+                android:right="12dp"
+                android:bottom="10dp"/>
+        </shape>
+    </item>
+
+    <!-- В фокусе, не нажат -->
+    <item android:state_focused="true">
+        <shape>
+            <solid android:color="#FFF3E0"/>
+            <corners android:radius="15dp" />
+            <padding
+                android:left="12dp"
+                android:top="10dp"
+                android:right="12dp"
+                android:bottom="10dp"/>
+        </shape>
+    </item>
+
+    <!-- Не в фокусе -->
+    <item>
+        <shape>
+            <solid android:color="#FFF8F0"/> <!-- светлее, когда не в фокусе -->
+            <corners android:radius="15dp" />
+            <padding
+                android:left="12dp"
+                android:top="10dp"
+                android:right="12dp"
+                android:bottom="10dp"/>
         </shape>
     </item>
 
