--- a/app/src/main/res/layout/profile_info.xml
+++ b/app/src/main/res/layout/profile_info.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="44dp"
-        android:text="Запись \nклиента"
+        android:text="Информация об\nучётной\nзаписи"
         android:textColor="@color/text_or_button"
         android:textSize="40dp"
         android:textStyle="bold"
@@ -36,9 +36,8 @@
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Дата"
+        android:hint="Фамилия"
         android:inputType="text"
-        android:enabled="false"
         app:layout_constraintStart_toStartOf="@+id/editTextText3"
         app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
 
@@ -48,7 +47,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Время"
+        android:hint="Ваш номер телефона"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="@+id/editTextText5"
         app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
@@ -59,51 +58,40 @@
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Ваш номер телефона"
+        android:hint="Email"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="@+id/editTextText6"
         app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
-
-    <EditText
-        android:id="@+id/editTextText8"
-        android:layout_width="334dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="text"
-        app:layout_constraintStart_toStartOf="@+id/editTextText7"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />
-
-    <EditText
-        android:id="@+id/editTextText9"
-        android:layout_width="334dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:gravity="left"
-        android:hint="Описание"
-        android:inputType="text"
-        app:layout_constraintStart_toStartOf="@+id/editTextText8"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText8" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextText5"
-        app:layout_constraintEnd_toEndOf="@+id/editTextText5"
-        app:layout_constraintTop_toTopOf="@+id/editTextText5"
-        app:layout_constraintVertical_bias="0.466"
-        app:srcCompat="@drawable/ic_calendar" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="334dp"
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
-        android:text="Записать"
-        app:layout_constraintStart_toStartOf="@+id/editTextText9"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText9" />
+        android:text="Изменить пароль"
+        app:layout_constraintEnd_toEndOf="@+id/editTextText7"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/editTextText7"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="334dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="12dp"
+        android:text="Выйти с учётной записи"
+        android:backgroundTint="@color/dark_button"
+        app:layout_constraintEnd_toEndOf="@+id/button4"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+
+    <include
+        android:id="@+id/customBottomBar"
+        layout="@layout/bottom_nav_bar3"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
