--- a/app/src/main/res/layout/requests.xml
+++ b/app/src/main/res/layout/requests.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/customBottomBar"
-        layout="@layout/bottom_nav_bar"
+        layout="@layout/bottom_nav_bar1"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
