--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -37,6 +37,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="16dp"
         android:hint="Пароль"
+        android:inputType="textPassword"
         android:textColorHint="@color/orange"
         app:layout_constraintEnd_toEndOf="@+id/etLoginEmail"
         app:layout_constraintHorizontal_bias="0.0"
@@ -78,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
