--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,14 @@
         android:id="@+id/requestsFragment"
         android:name="com.example.atelierapp.RequestsFragment"
         android:label="Login"
-        tools:layout="@layout/fragment_requests"/>
+        tools:layout="@layout/fragment_requests">
+        <action
+            android:id="@+id/action_requestsFragment_to_clientsFragment"
+            app:destination="@id/clientsFragment" />
+        <action
+            android:id="@+id/action_requestsFragment_to_newRequestFragment"
+            app:destination="@id/newRequestFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/newUserFragment"
@@ -43,4 +50,16 @@
             android:id="@+id/action_newUserFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/clientsFragment"
+        android:name="com.example.atelierapp.ClientsFragment"
+        android:label="Login"
+        tools:layout="@layout/fragment_clients"/>
+
+    <fragment
+        android:id="@+id/newRequestFragment"
+        android:name="com.example.atelierapp.NewRequestFragment"
+        android:label="Login"
+        tools:layout="@layout/fragment_new_request"/>
 </navigation>
