--- a/app/src/main/res/layout/concrete_client.xml
+++ b/app/src/main/res/layout/concrete_client.xml
@@ -14,11 +14,11 @@
         android:layout_marginStart="24dp"
         android:text="История заявок"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-        app:layout_constraintStart_toStartOf="@+id/recyclerView" />
+        app:layout_constraintBottom_toTopOf="@+id/clientsRecycler"
+        app:layout_constraintStart_toStartOf="@+id/clientsRecycler" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/clientsRecycler"
         android:layout_width="334dp"
         android:layout_height="200dp"
         tools:itemCount="2"
