--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -6,28 +6,26 @@
     android:layout_height="match_parent"
     android:background="@color/light_yellow">
 
-    <EditText
+    <TextView
         android:id="@+id/etSearchClients"
         android:layout_width="334dp"
         android:layout_height="55dp"
         android:layout_marginTop="40dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         android:ems="10"
-        android:hint="Поиск по клиентской базе"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:text="Клиентская база"
+        android:textStyle="bold"
         android:inputType="text"
-        android:textColorHint="@color/gray"
-        android:background="@drawable/edittext_rounded_corners"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/clientsRecycler"
         android:layout_width="334dp"
         android:layout_height="600dp"
-        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="@+id/etSearchClients"
         app:layout_constraintStart_toStartOf="@+id/etSearchClients"
         app:layout_constraintTop_toBottomOf="@+id/etSearchClients"
