--- a/app/src/main/res/layout/item_client.xml
+++ b/app/src/main/res/layout/item_client.xml
@@ -15,7 +15,7 @@
         android:padding="12dp">
 
         <TextView
-            android:id="@+id/titleTextView"
+            android:id="@+id/recyclerClientName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
