--- a/app/src/main/res/layout/item_request.xml
+++ b/app/src/main/res/layout/item_request.xml
@@ -24,7 +24,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/titleTextView"
+            android:id="@+id/recyclerClientName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
