--- a/app/src/main/res/layout/fragment_password_change.xml
+++ b/app/src/main/res/layout/fragment_password_change.xml
@@ -29,36 +29,36 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/etOldPassword"
         android:layout_width="334dp"
         android:layout_height="55dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="Пароль"
-        android:inputType="text"
+        android:hint="Старый пароль"
+        android:inputType="textPassword"
         android:textColorHint="@color/orange"
         app:layout_constraintStart_toStartOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <EditText
-        android:id="@+id/editTextText4"
+        android:id="@+id/etNewPassword"
         android:layout_width="334dp"
         android:layout_height="55dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="Повторите пароль"
-        android:inputType="text"
+        android:hint="Новый пароль"
+        android:inputType="textPassword"
         android:textColorHint="@color/orange"
-        app:layout_constraintStart_toStartOf="@+id/editTextText"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintStart_toStartOf="@+id/etOldPassword"
+        app:layout_constraintTop_toBottomOf="@+id/etOldPassword" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnContinue"
         android:layout_width="337dp"
         android:layout_height="57dp"
         android:layout_marginTop="32dp"
         android:text="Продолжить"
-        app:layout_constraintStart_toStartOf="@+id/editTextText4"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
+        app:layout_constraintStart_toStartOf="@+id/etNewPassword"
+        app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
