--- a/app/src/main/res/layout/request_confirmation.xml
+++ b/app/src/main/res/layout/request_confirmation.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="40dp"
         android:text="Заявка 0000"
+        android:visibility="invisible"
         android:textColor="@color/text_or_button"
         android:textSize="40dp"
         android:textStyle="bold"
